feat(server): implement user-data-handler and migrate to user sub-collections - Created `user-data-handler` Cloud Function to manage user-specific enricher data. - Refactored Firestore storage (InputStore, ExecutionStore) and handlers to use   user-scoped sub-collections (`users/{userId}/executions`, `users/{userId}/pending_inputs`). - Added migration scripts for root-level to user-subcollection data transfer. - Introduced `ENRICHER_PROVIDER_FIT_FILE_HEART_RATE` and `ENRICHER_PROVIDER_HYBRID_RACE_TAGGER` providers. - Extended `PendingInput` and `StandardizedActivity` schemas for richer metadata and time markers. - Updated `user-profile-handler` to support scoped record deletion.

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -31,7 +31,8 @@
     "oura-oauth-handler",
     "oura-handler",
     "polar-oauth-handler",
-    "polar-handler"
+    "polar-handler",
+    "user-data-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
