fix: install node where needed for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,6 +124,11 @@ jobs:
       - attach_workspace:
           at: .
       - run:
+          name: Install Node.js 22
+          command: |
+            curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+      - run:
           name: Upload Source Maps to Sentry
           command: |
              # Install Sentry CLI
@@ -138,6 +143,11 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "SHA256:VRiS+EY45HNsLzWN3a7lKsalrTzaBb4gRiQoc1IK0X4"
+      - run:
+          name: Install Node.js 22
+          command: |
+            curl -fsSL https://deb.nodesource.com/setup_22.x | sudo -E bash -
+            sudo apt-get install -y nodejs
       - run:
           name: Setup Git User
           command: |
