--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -36,7 +36,8 @@
     "polar-oauth-handler",
     "polar-handler",
     "user-data-handler",
-    "registration-summary-handler"
+    "registration-summary-handler",
+    "connection-actions-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
