feat(server): add GitHub integration, pipeline sync notifications, and generated enum parsers
GitHub Integration:
- Add SOURCE_GITHUB, DESTINATION_GITHUB, CLOUD_EVENT_SOURCE_GITHUB to
  proto enums, generated pb types (Go + TS), and enum formatters
- Add GitHubIntegration proto message with OAuth fields
- Register GitHub source, destination, and integration in plugin registry
  with full marketing copy, setup instructions, and feature lists
- Add 'developer' destination category
- Wire github OAuth token storage, UserStore.findByGitHubUsername lookup,
  and UserService.findByGitHubUsername
- Add DestinationTopics mapping and index.js entry point for github-handler
- Provision Terraform: github-uploader + github-handler Cloud Functions,
  github-oauth-handler, Pub/Sub topic, and Secret Manager entries
- Add GitHub to shared_modules.json, configure_oauth_secrets, and Makefile

Enum Formatter Generator:
- Extend generate-enum-formatters.ts to emit reverse parse functions
  (ParseActivityType, parseDestination, etc.) for both Go and TS
- Generate alias-aware lookup maps with display names, short names,
  and case-insensitive matching
- Replace hand-rolled parseFriendlyActivityType in activity_type.go
  with generated ParseActivityType
- Replace hand-rolled parseDestination in events-helper.ts with
  generated version; re-export for backward compatibility
- Resolve barrel export collision between events-helper and
  enum-formatters via named exports in types/index.ts

Pipeline Sync Notifications:
- Send push notification when all destinations reach terminal status
- Build human-readable messages (SYNCED vs PARTIAL) with destination names
- Respect user notification preferences
- Update destination.UpdateStatus signature across all uploaders to pass
  NotificationService and activityName
- Add FormatDestinationName helper and GetUser to destination.Database interface

Lint:
- Add GitHub to lint-codebase.ts coverage checks

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -37,7 +37,9 @@
     "polar-handler",
     "user-data-handler",
     "registration-summary-handler",
-    "connection-actions-handler"
+    "connection-actions-handler",
+    "github-handler",
+    "github-oauth-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
