feat(server): add ShowcaseProfile materialization, display config DSL for pending inputs, and enricher fixes
Showcase Profiles:
- Add ShowcaseProfile and ShowcaseProfileEntry proto messages with
  per-activity stats (distance, duration, sets, reps, weight)
- Add showcase_profiles Firestore collection with full Go + TS
  converters and ShowcaseProfileStore
- Dual-write in showcase-uploader: materialize/upsert profile entry
  on each showcase write (Athlete tier only), recompute aggregates
- Add Database interface methods and mock stubs for showcase profiles
- Add GET /api/showcase/profile/:slug API and /u/:slug redirect in
  showcase-handler
- Export ShowcaseProfileStore from shared storage barrel

Display Config DSL:
- Emit display.field_labels, display.field_types, display.summary, and
  display.title in pending input provider_metadata for server-driven
  field rendering
- Add display config to user_input provider (buildDisplayConfig helper)
  and parkrun provider pending inputs
- Support DSL types: textarea:rows=N, text:placeholder=X, file:accept=X,
  select, custom:hybrid_race_tagger

Enricher Fixes:
- Fix streak_tracker "personal best" message only showing on new days
- Add HR zone label output in fit_file_heart_rate provider
- Add fit-parser-handler strength data forwarding
- Add orchestrator_test and framework wrapper_test stubs for new DB methods

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -39,7 +39,8 @@
     "registration-summary-handler",
     "connection-actions-handler",
     "github-handler",
-    "github-oauth-handler"
+    "github-oauth-handler",
+    "data-export-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
