feat(showcase): add profile management, editable profiles, and enhanced showcase UI
- Add user-editable profile fields (subtitle, bio, profile picture, visibility)
  to ShowcaseProfile proto, Go/TS types, and Firestore converters
- Add showcase-management-handler for authenticated profile CRUD with
  Terraform provisioning and monitoring
- Add ShowcaseManagementPage with settings/showcase route and app header link
- Add showcase onboarding step to WelcomeBanner for Athlete-tier users
- Auto-select showcase destination in PipelineWizard when preference enabled
- Enhance showcase-handler: branded loading spinner on redirect, visibility
  gating, dynamic OG meta from profile fields, profile picture in OG image
- Enhance showcase.html: AI summary section, graph summaries, redesigned
  interval groups with insight cards
- Enhance showcase-profile.html: avatar with picture/initial fallback,
  dynamic subtitle and bio display
- Add demo fixture data (demo-hyrox, demo-sprints, demo-workout)
- Fix intervals enricher provider HR zone/sprint handling

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -40,7 +40,8 @@
     "connection-actions-handler",
     "github-handler",
     "github-oauth-handler",
-    "data-export-handler"
+    "data-export-handler",
+    "showcase-management-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
