feat: add auth-email-handler, branded email templates, and intervals enricher improvements
- Add auth-email-handler Cloud Function for branded verification, password reset, and email change emails
- Extract shared email templates into @fitglue/shared/email module
- Refactor registration-summary-handler and data-export-handler to use shared templates
- Add SPF and DMARC DNS records for email authentication
- Add Terraform config for auth-email-handler deployment
- Fix intervals enricher to skip non-structured intervals (single intensity type)
- Remove hardcoded "sprint" labels from intervals output
- Add showcase-handler pagination support with tests

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -41,7 +41,8 @@
     "github-handler",
     "github-oauth-handler",
     "data-export-handler",
-    "showcase-management-handler"
+    "showcase-management-handler",
+    "auth-email-handler"
   ],
   "scripts": {
     "build": "npm run build --workspace=@fitglue/shared && npm run build --workspaces --if-present",
