feat: add mobile-source-handler and Apple Health/Health Connect event sources
- Add new mobile-source-handler Cloud Function (Pub/Sub triggered) that
  maps mobile health activities into StandardizedActivity format
- Add CloudEventSource enums for Apple Health (15) and Health Connect (16)
  across proto, Go formatters, and TypeScript shared types
- Add topic-mobile-activity Pub/Sub topic and Terraform infrastructure
- Register mobile-source-handler in monorepo workspace
- Update mobile-sync-handler to publish to the new topic
- Update lint-codebase to cover new handler

--- a/src/typescript/package.json
+++ b/src/typescript/package.json
@@ -23,6 +23,7 @@
     "registry-handler",
     "integration-request-handler",
     "mobile-sync-handler",
+    "mobile-source-handler",
     "billing-handler",
     "showcase-handler",
     "repost-handler",
